# dynpy-config

./: README.org  dynpy-config.code-workspace  pyproject.toml
dynpy/: app.py  service.py
dynpy/ui/: controller.py  utils.py  view.py
tests/: test_source.py
